# prosperous

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  __init__.py  animation.py  assets.py  cleanup_plan_temp.md  components.py  engine.py  font.py  input_handler.py  interaction.py  known_issues.md  live.py  main.py  markup.py  music_player.py  pyproject.toml  render.py  renderers.py  styles.py  theme.py  utils.py
.gemini/agents/: unit-tester.md
examples/: kinetic_focus_demo.py  scroll_feature_verify.py
src/prosperous/: __init__.py  animation.py  assets.py  components.py  engine.py  font.py  input_handler.py  interaction.py  live.py  markup.py  renderers.py  styles.py  theme.py  utils.py
src/prosperous.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
tests/buffer/: test_render.py  test_text_markup.py
tests/unit/: test_animation.py  test_clipping_culling.py  test_components.py  test_engine.py  test_focus_index.py  test_layout.py  test_logview.py  test_render_context.py  test_renderers.py  test_scrollbox.py  test_style.py
