[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prosperous"
version = "0.1.0"
authors = [
  { name="Mikhail-YellowBegonia", email="doctorsergei2021@gmail.com" },
]
description = "A lightweight terminal UI library for high-frequency dynamic refresh scenarios."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]
dependencies = [
    "Pillow>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Mikhail-YellowBegonia/prosperous"
"Bug Tracker" = "https://github.com/Mikhail-YellowBegonia/prosperous/issues"
